<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ebuy</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_cart">My Cart</string>
    <string name="all_items">All Items</string>
    <string name="brand">Brand</string>
    <string name="Brand">Brand</string>
    <string name="sub_total">Subtotal</string>
    <string name="delivery">Delivery</string>
    <string name="checkout">Checkout</string>
    <string name="new_trends">New Trends</string>
    <string name="view_all">View All</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email address</string>
    <string name="enter_email_address">Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="card_number">Card Number</string>
    <string name="expire_data">Expire data</string>
    <string name="mm_yy">MM/YY</string>
    <string name="enter_name_on_card">Enter name on card</string>
    <string name="save_card">Save Card</string>
    <string name="we_accept">We accept</string>

    <string name="title_category">Category</string>
    <string name="cat_text_btn_men">Men</string>
    <string name="cat_text_btn_women">Women</string>
    <string name="cat_text_btn_kids">Kids</string>
    <string name="cat_text_btn_sale">Sale</string>
    <string name="cat_text_tv_discover">Discover</string>
    <string name="cat_text_search">Search any thing</string>
    <string name="cat_custom_btn_favo_text">Add</string>
    <string name="cat_text_name">Women</string>
    <string name="cat_custom_btn_addCart_text">Add Cart</string>
    <string name="cat_menu_favorite">Favorite</string>
    <string name="cat_menu_settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="profile_title">Profile</string>
    <string name="orders">My Order</string>
    <string name="more">More</string>
    <string name="my_favorites">My Favorites</string>
    <string name="order_price">Order price:</string>
    <string name="order_number">Order number:</string>
    <string name="order_status">Order status:</string>
    <string name="order_date">Order Date:</string>
    <string name="remove">REMOVE</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_first_name">Enter First name</string>
    <string name="enter_last_name">Enter Last name</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="country">Country</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_province">Enter Province</string>
    <string name="enter_country">Enter Country</string>
    <string name="add_payment">Add Payment</string>
    <string name="no_payment_method">You currently have No Payment Saved Payment Method, get Started By adding on</string>
    <string name="settings_address">Address</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_currency">Currency</string>
    <string name="there_is_no_account">There is no account.</string>
    <string name="description">Description</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="price">Price</string>
    <string name="saved_items">Saved items</string>
    <string name="product_image">Product image</string>
    <string name="insert_error">Could not add product to favorites</string>
    <string name="insert_seccuess">Liked</string>
    <string name="delete_success">Deleted</string>
    <string name="delete_error">Could not delete product from favorites</string>
    <string name="notExist">Not Exist</string>
    <string name="fav">Favorites</string>
    <string name="details_fragment_title">Details</string>
    <string name="favorite_empty_list_title">Your favorite list is empty right now</string>
    <string name="in_stock">In stock</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="alert_dialogue_title">Attention</string>
    <string name="alert_dialogue_message">The Product is already in the cart</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_cart">Go to Carts</string>
    <string name="product_out_of_stock">Product out of stock</string>
    <string name="select_product_quantity">Select Quantity</string>
    <string name="add">ADD</string>
    <string name="no_more_in_stock">No more in stock.</string>

    <string name="email_error" tools:ignore="ExtraTranslation">Email must be in format example@gmail.com</string>
    <string name="password_error" tools:ignore="MissingTranslation">Password must be upper lower special char number and greater than 8</string>
    <string name="name_error" tools:ignore="MissingTranslation">Enter a valid Name</string>
    <string name="DeliveryPrice">50 EGP</string>
    <string name="invalid_password">Invalid  password</string>
    <string name="invalid_email">Invalid  email</string>
    <string name="invailed_auth_data">Your data does not match an Ebuy account.</string>
    <string name="auth_error">Authentication error</string>
    <string name="no_orders_yet">There is No Orders Yet</string>
    <string name="delete">Delete</string>
    <string name="no_item_in_cart">There is no item in cart</string>
    <string name="already_have_an_acount">Already have an acount?</string>
    <string name="empty_products">No products found!</string>
    <string name="searching_products">Search for product</string>
    <string name="brands_search">Search for brand</string>
    <string name="no_brands_found">No brands found!</string>
    <string name="sign_in_insted">Sign in instead</string>
    <string name="OrdersFragment">Orders</string>


    <string-array name="sortProducts">
        <item>A to Z</item>
        <item>Z to A</item>
        <item>lowest to highest price</item>
        <item>highest to lowest price</item>
    </string-array>

    <string name="connected">Connected</string>
    <string name="not_connected">No internet connection</string>
    <string name="please_connect_to_network_to_use_our_application">Check internet connection</string>

    <string name="settings_label">Settings</string>
    <string name="addresses_fragment">Addresses</string>
    <string name="address_1">Address</string>
    <string name="address_2">Address 2</string>
    <string name="province_title">Province</string>
    <string name="city_title">City</string>
    <string name="phone_number">Phone number</string>
    <string name="address_name">Type (Office, Home, Meet up point)</string>
    <string name="save_address">Save address</string>
    <string name="discount">Discount Code</string>
    <string name="ok">OK</string>
    <string name="copy_code">Copy Code</string>
    <string name="no_addresses">You don\'t have any saved addresses</string>
    <string name="add_address_title">Add address</string>
    <string name="edit_address_title">Add address</string>
    <string name="make_defult">Make defult</string>
    <string name="update_address">Update Address</string>
    <string name="size">Size</string>
    <string name="messing_details">Missing details</string>
    <string name="AddToCartDialogTag">AddToCartDialog</string>
    <string name="order_done">Order is Done</string>
    <string name="order_error">Error in order</string>
    <string name="status">Status</string>
    <string name="order_number_const">Order Number</string>
    <string name="order_placed">Order Placed</string>
    <string name="we_have_received_your_order">We have received your order</string>
    <string name="order_shipping">Order Shipping</string>
    <string name="order_shipping_shubtitle">Your order is ready for shipping</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="ordere_delivered_subtitle">Your order has been delivered</string>
    <string name="fragment_track_order">Track order</string>
    <string name="credit">Credit</string>
    <string name="profile">Profile</string>
    <string name="payment">Payment</string>
    <string name="total">Total</string>
    <string name="cancel_order">Order canceled</string>
    <string name="pay_cash">Cash on delivery</string>
    <string name="yes">Yes</string>
    <string name="there_s_no_orders_yet">There\'s no orders yet</string>
    <string name="btn_check_discount">get discount</string>
    <string name="total_price_after_discount">Total Price After Discount</string>


    <string-array name="egypt_province_codes">
        <item>EG-DK</item>
        <item>EG-BA</item>
        <item>EG-BH</item>
        <item>EG-FYM</item>
        <item>EG-GH</item>
        <item>EG-ALX</item>
        <item>EG-IS</item>
        <item>EG-GZ</item>
        <item>EG-MNF</item>
        <item>EG-MN</item>
        <item>EG-C</item>
        <item>EG-KB</item>
        <item>EG-LX</item>
        <item>EG-WAD</item>
        <item>EG-SUZ</item>
        <item>EG-SHR</item>
        <item>EG-ASN</item>
        <item>EG-AST</item>
        <item>EG-BNS</item>
        <item>EG-PTS</item>
        <item>EG-DT</item>
        <item>EG-JS</item>
        <item>EG-KFS</item>
        <item>EG-MT</item>
        <item>EG-KN</item>
        <item>EG-SIN</item>
        <item>EG-SHG</item>
    </string-array>

    <string-array name="egypt_province_names">
        <item>Dakahlia</item>
        <item>Red Sea</item>
        <item>Beheira</item>
        <item>Faiyum</item>
        <item>Gharbia</item>
        <item>Alexandria</item>
        <item>Ismailia</item>
        <item>Giza</item>
        <item>Monufia</item>
        <item>Minya</item>
        <item>Cairo</item>
        <item>Qalyubia</item>
        <item>Luxor</item>
        <item>New Valley</item>
        <item>Suez</item>
        <item>Al Sharqia</item>
        <item>Aswan</item>
        <item>Asyut</item>
        <item>Beni Suef</item>
        <item>Port Said</item>
        <item>Damietta</item>
        <item>South Sinai</item>
        <item>Kafr el-Sheikh</item>
        <item>Matrouh</item>
        <item>Qena</item>
        <item>North Sinai</item>
        <item>Sohag</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_city">Invalid city</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="invalid_province">Invalid province</string>
    <string name="detailes_19_104_el_hnager_new_cairo">Detailes.(19, 104 El-hnager, New cairo)</string>
    <string name="welcome_user">"Welcome, "</string>
    <string name="log_out_message">Are you sure you want to Logout?</string>
    <string name="shipping">shipping</string>
    <string name="delivering">delivering</string>
    <string name="delivered">delivered</string>
    <string name="choose_address">You should choose an Address</string>
    <string name="copied_code">Successfully copied</string>
</resources>