<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.iti.android.team1.ebuy.ui.home.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_Category"
        android:name="com.iti.android.team1.ebuy.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.iti.android.team1.ebuy.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/creditFragment"
        android:name="com.iti.android.team1.ebuy.ui.credit_screen.view.CreditFragment"
        android:label="CreditFragment" />
        android:id="@+id/paymentFragment"
        android:name="com.iti.android.team1.ebuy.ui.payment_screen.PaymentFragment"
        android:label="fragment_payment"
        tools:layout="@layout/fragment_payment" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.iti.android.team1.ebuy.ui.cart_screen.view.CartFragment"
        android:label="fragment_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.iti.android.team1.ebuy.ui.profile_screen.view.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>