<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.onbording.OnBoardingFragment">

    <Button
        android:id="@+id/btnSkip"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_gravity="end"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="end|bottom"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnPrev"
        android:layout_margin="@dimen/_10sdp"
        android:layout_gravity="start|bottom"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/worm_dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_margin="@dimen/_25sdp"
        android:layout_gravity="center|bottom"
        app:dotsColor="@color/unselected_indicator"
        app:dotsCornerRadius="@dimen/_6sdp"
        app:dotsSize="@dimen/_12sdp"
        app:dotsSpacing="@dimen/_3sdp"
        app:dotsWidthFactor="2.5"
        app:progressMode="false"
        app:selectedDotColor="@color/Primary" />

</FrameLayout>