<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".ui.settings.view.SettingsFragment">

    <RelativeLayout
        android:id="@+id/address_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/settings_item_shape"
        android:padding="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp">

        <TextView
            android:id="@+id/tv_address"
            style="@style/fontBoldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:text="@string/settings_address"
            app:drawableStartCompat="@drawable/address_image" />

        <TextView
            android:id="@+id/tv_editable_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@+id/relative1_arrow"
            android:layout_toEndOf="@+id/tv_address" />

        <ImageView
            android:id="@+id/relative1_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/right_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/currency_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_relative"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/settings_item_shape"
        android:padding="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp">

        <TextView
            android:id="@+id/tv_currency"
            style="@style/fontBoldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:text="@string/settings_currency"
            app:drawableStartCompat="@drawable/money_icon" />

        <TextView
            android:id="@+id/tv_editable_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@+id/relative2_arrow"
            android:layout_toEndOf="@+id/tv_currency" />

        <ImageView
            android:id="@+id/relative2_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/right_arrow" />

    </RelativeLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_mode"
        style="@style/fontBoldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currency_relative"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/settings_item_shape"
        android:drawableStart="@drawable/night_image"
        android:drawablePadding="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/dark_mode"
        app:thumbTint="@color/Primary" />

    <RelativeLayout
        android:id="@+id/logout_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dark_mode"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/settings_item_shape"
        android:padding="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_5sdp">

        <TextView
            android:id="@+id/tv_logOut"
            style="@style/fontBoldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_3sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:text="@string/settings_logout"
            app:drawableStartCompat="@drawable/logout"
            app:drawableTint="@color/Primary" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/right_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_account_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_no_account"
            style="@style/fontBoldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_3sdp"
            android:text="@string/there_is_no_account" />

        <TextView
            android:id="@+id/tv_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_no_account"
            android:text="@string/sign_in"
            android:textColor="@color/purple_700" />
    </RelativeLayout>

</RelativeLayout>
