<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:padding="@dimen/_6sdp"
    tools:context="ui.category.CategoryFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            tools:context="ui.category.CategoryFragment">

            <TextView
                android:id="@+id/cat_tv_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_6sdp"
                android:text="@string/cat_text_tv_discover"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />


            <HorizontalScrollView
                android:id="@+id/cat_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cat_tv_discover"
                android:layout_alignStart="@+id/cat_recycle_view"
                android:layout_marginBottom="@dimen/_6sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cat_btn_men"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:backgroundTint="@color/white"
                        android:text="@string/cat_text_btn_men"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        app:cornerRadius="@dimen/_9sdp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cat_btn_women"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:backgroundTint="@color/white"
                        android:text="@string/cat_text_btn_women"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        app:cornerRadius="@dimen/_9sdp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cat_btn_kids"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:backgroundTint="@color/white"
                        android:text="@string/cat_text_btn_kids"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        app:cornerRadius="@dimen/_9sdp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/cat_btn_sale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:backgroundTint="@color/white"
                        android:text="@string/cat_text_btn_sale"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        app:cornerRadius="@dimen/_9sdp" />

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/cat_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cat_scroll"
                android:layout_alignStart="@+id/cat_recycle_view"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:text="@string/cat_text_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cat_recycle_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/cat_tv_name"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/category_custom_rv_item" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
   <com.getbase.floatingactionbutton.FloatingActionsMenu
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="true"
       android:layout_alignParentBottom="true"
       app:fab_addButtonColorNormal="@color/Primary"
       >

       <com.getbase.floatingactionbutton.FloatingActionButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:fab_icon="@drawable/rings"
           app:fab_colorNormal="@color/Primary"
           />
       <com.getbase.floatingactionbutton.FloatingActionButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:fab_icon="@drawable/shirt"
           app:fab_colorNormal="@color/Primary"
           />
       <com.getbase.floatingactionbutton.FloatingActionButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:fab_icon="@drawable/sneakers"
           app:fab_colorNormal="@color/Primary"
           />

   </com.getbase.floatingactionbutton.FloatingActionsMenu>
</RelativeLayout>